--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@nuxtjs/axios": "^5.3.6",
         "ant-design-vue": "^1.1.10",
+        "axios": "^0.19.0",
         "bluebird": "^3.5.3",
         "body-parser": "^1.19.0",
         "cheerio": "^1.0.0-rc.3",
