--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "generate": "nuxt generate"
     },
     "dependencies": {
+        "@nuxtjs/auth": "^4.8.1",
         "@nuxtjs/axios": "^5.3.6",
         "ant-design-vue": "^1.1.10",
         "axios": "^0.19.0",
