--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
 NODE_ENV='production'
 API_DOMAIN=http://127.0.0.1:3000
+LIMIT_UPLOAD=2000000
+DB_HOST=localhost
+DB_NAME=crawler
+DB_PORT=
+SECRET=TOP_SECRET
