--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "jsonwebtoken": "latest",
         "lodash": "^4.17.11",
         "mongoose": "^5.6.2",
+        "mongoose-aggregate-paginate": "^1.1.3",
         "mongoose-unique-validator": "^2.0.3",
         "morgan": "^1.9.1",
         "nuxt": "^2.0.0",
