--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
         "puppeteer": "^1.18.1",
         "socket.io": "^2.2.0",
         "socket.io-client": "^2.2.0",
-        "v-jsoneditor": "^1.2.0"
+        "v-jsoneditor": "^1.2.0",
+        "xmldom": "^0.1.27",
+        "xpath": "^0.0.27"
     },
     "devDependencies": {
         "coffee-loader": "^0.9.0",
